tests/asm-link/union-mismatch/rgbasm.err
error: cannot align the section's lower 1 bit to 0
   ╭─[ test.asm:2:15 ]
   │
 2 │ section union "fixed", wram0, align[1]
   │               ───┬───  
   │                  ╰───── the fixed address would have the bit equal to $01 at this point
───╯
1 error generated.
